Add more classes

--- a/_posts/2025-01-13-class1.md
+++ b/_posts/2025-01-13-class1.md
@@ -1,23 +1,18 @@
 ---
-title: "I'll Crash your Netflix TV: finding CVE-2019-10028"
+title: "Class 1"
 layout: post
-tags: [research, bug-hunting, pwn, fuzzing]
-description: "Finding an out-of-bounds read on a Netflix-DIAL server with Mayhem"
+description: "Class 1"
 ---
 
-## Welcome to Class #1
+## Welcome to Class 1: Introduction
 
-We will cover:
+Welcome to the beginning of the class.
+In this class we will give a simple introduction into what the class is about and why you should stay to find out.
+If you have not read the syllabus yet, please find it below and have a read. 
 
-- Syllabus review
-- What to expect from this course
+You can find new class announcements in the announcements tab. 
 
-Some code:
-```c
-int main()
-{
-    puts("hello world");
-}
-```
+### Class Content
+- [Slides](https://tinyurl.com/cse194-hh)
+- [Syllabus](https://docs.google.com/document/d/17zF3548OFXRd3cKCEzQ5z-zWV8j_TwNrXrYQTfFE-yY/edit?usp=sharing)
 
-Yikes
