--- a/_posts/2025-01-13-class1.md
+++ b/_posts/2025-01-13-class1.md
@@ -16,3 +16,10 @@ You can find new class announcements in the announcements tab.
 - [Slides](https://tinyurl.com/cse194-hh)
 - [Syllabus](https://docs.google.com/document/d/17zF3548OFXRd3cKCEzQ5z-zWV8j_TwNrXrYQTfFE-yY/edit?usp=sharing)
 
+## Assignment 0: Who are you? (due 01/19, 11:59pm)
+In hacking, **names have power**. For this assignment, you have three tasks:
+1. Select your hacker name (Example: mahaloz)
+2. Write why you selected it (1 paragraph)
+3. Select a piece of hacking art: movie (clip), tv show (cip), song, picture. Please link something or give a reference it can be found under. Example: _“Neon Genesis Evangelion (1995), Episode 13, 18:43 - 19:58”_ 
+
+Note: there is another assingment also shown on 01/20, though the classed is skipped. Please go see it for its due date. 
