--- a/_posts/2025-01-20-skip1.md
+++ b/_posts/2025-01-20-skip1.md
@@ -5,3 +5,10 @@ description: "Skip"
 ---
 
 ## NO CLASS: Enjoy MLK day!
+
+## Assignment 1: Responding to Hackers (due 01/26, 11:59pm)
+The movie **Hackers (1995)** shaped much of hacking culture in the early 2000s. 
+This film in many ways was the start of media recognition of hackers. After watching this film, **respond to it in one of three ways**:
+1. **History**: write ½ to 1 page of text (single space) on how this movie has changed, altered, or affirmed your vision of hackers/hacking.
+2. **Art**: create some artwork (any format) that is inspired by the film. Creativity is rewarded! 1 paragraph explain what it means.
+3. **Tech**: create some kind of technology (website or code) that is inspired by the movie. 
