--- a/_posts/2025-02-17-class.md
+++ b/_posts/2025-02-17-class.md
@@ -6,4 +6,7 @@ description: "Class 2"
 
 ## Attend CactusCon 2025 on February 14th, a Friday 
 - Check in with Zion at any time during the conference for attendance and participation. 
-- Attending the conference the will count for the normal class credit on February 17th (Monday).
+- Attending the conference the will count for the normal class participation and attendance. 
+
+## Assignment: Attend (or watch) a talk!
+  
