Update trusting trust

--- a/_posts/2025-01-27-class2.md
+++ b/_posts/2025-01-27-class2.md
@@ -5,4 +5,26 @@ description: "Class 2"
 ---
 
 ## Class 2: Trusting Trust
-TBA
+A fundamental principle of being a hacker is understanding what is trustworthy and what is not. 
+In this class, we will explore the concept of trusting trust, or the process of giving something your trust.
+
+### Class Content
+- [Slides](https://docs.google.com/presentation/d/1_sObP_NUjz3uNKnFW1VHNdvsx95vzerXZdIOCVO-jZA/edit?usp=sharing)
+
+## Lock picking Exercise 
+For class today, participation is based on your ability to unlock the provided practice lock without the key!
+Those who can unlock the MasterLock #3 will recieve extra credit. 
+
+Here are some videos we think are helpful:
+- ["Lock Picking... An Inside Perspective"](https://www.youtube.com/watch?v=T_sy3dLwHkc), LockPickingLawyer
+- ["Start With Good Habits While Learning To Pick Locks"](https://www.youtube.com/watch?v=zkp4b-ryr2c), HelpfulLockPicker
+- ["How To Easily Pick A Lock"](https://www.youtube.com/watch?v=HBSTWr_LgaY), HelpfulLockPicker
+
+## Assignment 2: Trusting Trust Response
+Respond to a famous paper by Ken Thompson, co-creator of C and Unix: 
+[Reflections on Trusting Trust](https://dl.acm.org/doi/10.1145/358198.358210 https://www.cs.cmu.edu/~rdriley/487/papers/Thompson_1984_ReflectionsonTrustingTrust.pdf)
+
+Choose 1 response type:
+- History: ½ page response on the paper above. Relate it to something you trust in real life, be it your locks or your academic advisor.
+- Art: Make some art that invokes the same feelings Ken Thompson does in the paper above, ideally involving some sort of trust. 
+- Tech: Implement something with NO SSL/TLS support like a website with password input, but no encryption on it. Demo how to steal the content (sniffing). 
