update with Wil info

--- a/_posts/2025-01-27-class2.md
+++ b/_posts/2025-01-27-class2.md
@@ -8,12 +8,16 @@ description: "Class 2"
 A fundamental principle of being a hacker is understanding what is trustworthy and what is not. 
 In this class, we will explore the concept of trusting trust, or the process of giving something your trust.
 
+Halfway through the class time, we will also have a guest lecture by [Wil Gibbs](https://wilgibbs.com/) on Lock Picking, one of the earliest forms of Hacking. 
+Wil, is a previous captain of the Shellphish Hacking team, is the current leader of the 2 million dollar [AIxCC](https://aicyberchallenge.com/) endeavor of that team (ARTIPHISHELL), and is a seasoned hacker. 
+
 ### Class Content
-- [Slides](https://docs.google.com/presentation/d/1_sObP_NUjz3uNKnFW1VHNdvsx95vzerXZdIOCVO-jZA/edit?usp=sharing)
+- [Main Slides](https://docs.google.com/presentation/d/1_sObP_NUjz3uNKnFW1VHNdvsx95vzerXZdIOCVO-jZA/edit?usp=sharing)
+- [Lock Picking Slides](https://docs.google.com/presentation/d/1xe8Zx5bH4IThKO_8cyyv9IdzFw_bGs8hsmkdQ-s7I_k/edit?usp=sharing)
 
 ## Lock picking Exercise 
 For class today, participation is based on your ability to unlock the provided practice lock without the key!
-Those who can unlock the MasterLock #3 will recieve extra credit. 
+Those who can unlock the MasterLock #3 will receive extra credit. 
 
 Here are some videos we think are helpful:
 - ["Lock Picking... An Inside Perspective"](https://www.youtube.com/watch?v=T_sy3dLwHkc), LockPickingLawyer
