--- a/_posts/2025-01-27-class2.md
+++ b/_posts/2025-01-27-class2.md
@@ -26,7 +26,7 @@ Here are some videos we think are helpful:
 
 ## Assignment 2: Trusting Trust Response
 Respond to a famous paper by Ken Thompson, co-creator of C and Unix: 
-[Reflections on Trusting Trust](https://dl.acm.org/doi/10.1145/358198.358210 https://www.cs.cmu.edu/~rdriley/487/papers/Thompson_1984_ReflectionsonTrustingTrust.pdf)
+[Reflections on Trusting Trust](https://www.cs.cmu.edu/~rdriley/487/papers/Thompson_1984_ReflectionsonTrustingTrust.pdf)
 
 Choose 1 response type:
 - History: ½ page response on the paper above. Relate it to something you trust in real life, be it your locks or your academic advisor.
