--- a/_posts/2025-02-03-class3.md
+++ b/_posts/2025-02-03-class3.md
@@ -13,5 +13,15 @@ In this class, we will explore this early hacking.
 ### Class Content
 - [Slides](https://docs.google.com/presentation/d/1_mAYctQDUg0Key4C8-DxIgQoDt5TCeDfSrsipCDuzjs/edit?usp=sharing)
 
-## Assignment 3: TBA
-TBA
+## Assignment 3: Respond to Wargames
+**Wargames** shows a side of the hacking culture that is about exploring and curiosity. How do you feel about hacker curiosity in Wargames? 
+
+_You know the deal_, respond **in one of three ways**:  
+**History:** ½ page (single-spaced) on your view of hacker curiosity as seen in the film and a time when you experienced something similar. Think, thinking about how something works internally. 
+
+**Art:** Any art response to the film, including paintings, collages, …
+
+**Tech:** Any programming implementation response to the film (include recording if possible)
+
+## Register For CactusCon
+- [https://www.cactuscon.com/cc13-tickets](https://www.cactuscon.com/cc13-tickets)
