--- a/_posts/2025-02-10-class4.md
+++ b/_posts/2025-02-10-class4.md
@@ -1,14 +1,42 @@
 ---
 title: "Class 4: Early Hackers: BBS"
 layout: post
-description: "Class 3"
+description: "Class 4"
 ---
 
 ## Class 4: Early Hackers: BBS
-BBS Hacking. 
+After Phreaking, hackers looked for a ways to share and save information efficiently. 
+In the real world, bulletin boards acted as a way to share anonymous info with many people, and so, hackers made it virtual.
+Bulletin Board Systems (BBS), because the go to method in the 80s for sharing information among hackers. 
+In this class, we will explore what it was like to be a hacker then and how they used these BBSes.
 
 ### Class Content
-TBA.
+- [Slides](https://docs.google.com/presentation/d/1P3Mdsjlb2dg1-rNzREXusY46C8QZUX8dgd06Fb66zmA/edit?usp=sharing)
+- [BBS challenges](https://pwn.college/hacker-history~43f7181b/bbs/)
 
-## Assignment 4: TBA
-TBA.
+### In-class Exercise: Using a BBS
+We will be using a real world BBS this class to find information, and then simulate what it was like to save info offline.
+All challenges can be found through the class pwn.college Dojo: [Hacker History Dojo](https://pwn.college/hacker-history~43f7181b/).
+
+Complete the [BBS levels](https://pwn.college/hacker-history~43f7181b/bbs/).
+
+## Next Class Reminder
+- Next class is replaced with our field trip to CactusCon 2025 on Friday between 9am-5pm. 
+- Check in with Zion
+- There is no class next Monday (February 17th)
+
+## Assignment 4: CactusCon Talk Response
+**Attend at least one talk.**
+
+For one, respond in **1 page double-spaced** to the following:
+
+- What **tech** is being demonstrated/talked about?
+- **Historically**, how is it novel, or what does it build on?
+- What are the **art** vibes/feelings from the presentation?
+
+- Neon?
+- Retro?
+- Corporate?
+
+- Did you learn anything new?
+
