--- a/_posts/2025-02-17-class.md
+++ b/_posts/2025-02-17-class.md
@@ -1,12 +1,15 @@
 ---
 title: "Class 5: Hacker Conferences (field trip)"
 layout: post
-description: "Class 2"
+description: "Class 5"
 ---
 
 ## Attend CactusCon 2025 on February 14th, a Friday 
 - Check in with Zion at any time during the conference for attendance and participation. 
 - Attending the conference the will count for the normal class participation and attendance. 
 
-## Assignment: Attend (or watch) a talk!
-  
+## Assignment 5: Hacker ASCII/ANSI Art 
+In your interactions with a real BBS, you’ve learned how prevalent ASCII art and ASNI art/colors are to hackers. Previously, you’ve chosen hacker names; now, **create an ASCII/ANSI image that goes with your chosen hacker name**.
+- Create an ASCII/ANSI image.
+- Include a paragraph or two explaining it 
+- Bonus: if it fits on a normal terminal screen (80 - 100 chars in width)
