Add all classes

--- a/_posts/2025-02-24-class.md
+++ b/_posts/2025-02-24-class.md
@@ -4,8 +4,32 @@ layout: post
 description: "Class 6"
 ---
 
-## Class 5: Early Hackers: Hacker Zines
-- TBA
+## Class 6: Early Hackers: Hacker Zines
+Hackers loved to share knowledge, and after the start of the [BBS era](./2025-02-10-class4.md), hackers needed a new _format_ by which to share that knowledge.
+Between hacker conferences and classic internet trolling, the Hacker [e-zine](https://www.merriam-webster.com/dictionary/e-zine) was born! 
+In this class, we will learn about the nearly fictitious way hackers shared exploit and culture knowledge (all in ASCII 7-bit)!
 
-## Assignment 6:
+### Class Content
+- [Slides](https://docs.google.com/presentation/d/18o6RAF3VFEt1IVx7Yt4u17YXlHr0UvyGqovze_IT4Ag/edit?usp=sharing)
+- [Gandalf AI Challenges](https://gandalf.lakera.ai)
+
+
+### In-class Exercise: The Power of Words (and LLMs)
+So far, we've learned two things in this class:
+1. Hackers share knowledge (often through words)
+2. Hackers constantly need to evolve to the latest tech
+
+Interestingly, we are living in the next era of new tech and new ways to share knowledge. 
+Words have power, and so does trust... 
+What happens when the new age of hacking, _with words_, meets technology that we can't trust? 
+
+In this exercise you will be trying your hand at the new age of hacking: [LLM Jailbreaking](https://jailbreaking-llms.github.io/). 
+The goal is simple: **the LLM knows a secret that you want to know, but the LLM has been instructed to NEVER give you it**.
+How can you trick the LLM into giving you the secret, even though its instructions say not to? 
+
+**Exercise**:
+- Complete the first 4 levels of [Gandalf AI](https://gandalf.lakera.ai). 
+
+
+## Assignment 6: Hacker Prophiles
 - TBA 
