--- a/_posts/2025-02-24-class.md
+++ b/_posts/2025-02-24-class.md
@@ -32,4 +32,20 @@ How can you trick the LLM into giving you the secret, even though its instructio
 
 
 ## Assignment 6: Hacker Prophiles
-- TBA 
+Zines gave us a small look into people’s lives. Hacker Zines lets us understand how hackers live. Now, it's time for you to give back to the community by making a zine about a hacker, sharing with us a piece of their world. These types of Zines are known as Hacker Prophiles. Create one about a hacker.
+Assignment Steps
+
+1. Pick a hacker.
+2. Claim them on the sheet (add more as needed)
+3. Find their multiple occurrences on phrack, google, wikipedia, etc!
+4. Build a prophile zine
+### Content Requirements:
+- At least 300 words
+- At least 1 ASCII diagram or picture
+- Include the hacker's effects on history, technology, and art. 
+
+### Formatting Requirements:
+- Turn in a plaintext document (a .txt file with no special formatting)
+- All lines must be wrapped at 80 characters (no line should have more than 80 chars)
+
+I recommend starting in a standard word editor, then copying and pasting after checking the spelling. For inspiration on what a good prophile looks like, see The Mentor's prophile on Phrack.
