--- a/_posts/2025-02-03-class3.md
+++ b/_posts/2025-02-03-class3.md
@@ -14,7 +14,7 @@ In this class, we will explore this early hacking.
 - [Slides](https://docs.google.com/presentation/d/1_mAYctQDUg0Key4C8-DxIgQoDt5TCeDfSrsipCDuzjs/edit?usp=sharing)
 
 ## Assignment 3: Respond to Wargames
-**Wargames** shows a side of the hacking culture that is about exploring and curiosity. How do you feel about hacker curiosity in Wargames? 
+**Wargames** (1983) shows a side of the hacking culture that is about exploring and curiosity. How do you feel about hacker curiosity in the film Wargames? 
 
 _You know the deal_, respond **in one of three ways**:  
 **History:** ½ page (single-spaced) on your view of hacker curiosity as seen in the film and a time when you experienced something similar. Think, thinking about how something works internally. 
