--- a/_posts/2025-03-03-class.md
+++ b/_posts/2025-03-03-class.md
@@ -5,7 +5,16 @@ description: "Class 7"
 ---
 
 ## Class 7: Early Hackers: Interconnectivity 
-- TBA
+With BBS's gaining large popularity in various cities, and Zines connecting hackers IRL, the community finally starts moving towards full interconnectedness through the first glimpses of the internet. 
+In this class we will explore the creation early internet, the APRANET, and how RFCs played a fundamental role. 
 
-## Assignment 7:
-- TBA 
+### Class Content 
+- [Slides](https://docs.google.com/presentation/d/1oWtz3Gt43dOLPugNz6X6SIC2It0q99ukIgL3-A-XuoE/edit?usp=sharing)
+
+### In-Class Movie
+- A first look at hackers as they get jobs: [Sneakers (1992)](https://en.wikipedia.org/wiki/Sneakers_(1992_film))
+
+## Assignment 7: Hacking Heist
+The movie **Sneakers (1992)** is often considered the heist movie of hackers. Many hackers identified with it because of its accurate depictions of building a plan to hack someone/something. In this response, you will become the heist hacker!
+
+In **at least 300 words**, plan and describe a fictional heist on a real organization/company or person. Describe a fictional reason why to hack them, what you hope to extract from them, and the steps (objects to hack, people to trick, things to acquire) to pull the hack off. Get creative, imagine you have great skill and time, what things need to be pwned to hack this target? 
