Update for class today

--- a/_posts/2025-03-24-class.md
+++ b/_posts/2025-03-24-class.md
@@ -1,11 +1,32 @@
 ---
-title: "Class 9: Early Hackers: The Morris Worm (and others)"
+title: "Class 8: The Internet"
 layout: post
-description: "Guest Lecture"
+description: "Class 8: The Internet"
 ---
 
-## Class 9: Early Hackers: The Morris Worm (and others)
-- TBA
+## Class 8: The Internet: Usenet, IRC, and The Morris Worm
+After the internet started spreading, so did the need to communicate instantly.
+Thus, the era of the [Internet Relay Chat (IRD)](https://en.wikipedia.org/wiki/IRC) began!
+Hackers begin talking to each other instantly, and with that, comes vulnerabilities and new culture. 
 
-## Assignment 9:
-- TBA
+In conjunction with the new benefits came new negatives: viruses!
+We will cover the very first worm that shut down the Interent, the Morris Worm. 
+
+### Class Content 
+- [Slides](https://docs.google.com/presentation/d/1a8p6LrcfOXzU2VFGKuj2hgfgjbaJbqVnoODlajI3puw/edit?usp=sharing)
+
+### In-class Exercise: Using an IRC
+We will be completing all the levels in the IRC module for the Hacker History dojo on pwn.college.
+- [Challenges](https://pwn.college/hacker-history~43f7181b/irc/)
+
+## Assignment 8: Famous Malware and Hacks
+For this assignment, you can choose to do either the written submission or the programming submission.
+
+The Morris Worm was the first massive hack in recorded internet history, but it was far from the last. Over time, we've seen more and more. For this assignment, you will write about your favorite malware, breach, or hack. Some examples include the Solar Winds attack or any iPhone jailbreak, such as Checkrain.
+
+Written Requirements:
+- At least 250 words
+- Cite at least one reference of this hack by some media or blogger
+- Include at least one image associated with the hack, such as a hacker gang logo or hack result (like a blue screen)
+
+**TECHNICAL ALTERNATIVE**: If you would rather do a technical submission, you can submit some malware that must self-replicate, try to hide, and send data home.
