--- a/_posts/2025-03-31-class.md
+++ b/_posts/2025-03-31-class.md
@@ -5,6 +5,22 @@ description: "Guest Lecture"
 ---
 
 ## Class 9: Hacker Collectives
+As hackers meet each other online and IRL, groups begin to form, called Hacker Collectives. 
+In this class, we will explore some of the more influential hacker collectives, some events surronding them, and how they have shaped some of modern hacking security. 
+
+### Class Content 
+- [Slides](https://docs.google.com/presentation/d/1zQoCLUwiWfbf1OcoSm9UGSri9O3b_xSMwDqcDGaihng/edit?usp=sharing)
+
+### In-class Movie: The DEF CON Documentary
+- [Movie Link](https://www.youtube.com/watch?v=3ctQOmjQyYg)
+
 
 ## Assignment 9:
-- TBA
+The DEF CON Documentary shows off many aspects of what hackers like and how they may behave while in a group. Choose three elements you found interesting (good or bad) about the hacking community and conferences. Write about them and expand on how they have shaped your view of hackers. 
+
+Requirements:
+- Choose three elements shown in the documentary (Examples: events, behaviors, competitions…)
+- At least 250 words
+
+**Technical Alternative**:
+Choose a DEFCON CTF challenge from https://archive.ooo/, spend at least 2 hours on the challenge and do a technical writeup of what you did/learned.
