--- a/_posts/2025-04-14-class.md
+++ b/_posts/2025-04-14-class.md
@@ -1,11 +1,14 @@
 ---
-title: "Class 10: The Dark Side"
+title: "Class 10: Replaced! See assignment."
 layout: post
-description: "Guest Lecture"
+description: "Replaced"
 ---
 
-## Class 10: The Dark Side
-- TBA
+## Class 10: Cancelled! See assignment.
+Due to scheduling conflicts, this class was cancelled. Instead, you will be watching a documentary on Snowden. 
 
-## Assignment 10
-- TBA
+## Assignment 11: Respond to Snowden
+Edward Snowden is one of the most famous government hackers in history. He is responsible for the biggest intelligence leak in American history, which shaped the modern discussion of privacy and government snooping. For this assignment, you will watch the acclaimed movie [Citizenfour](https://en.wikipedia.org/wiki/Citizenfour), an as-it-happens documentary about Edward Snowden and his 2013 leak.
+
+Respond to the documentary:
+In at least 250 words, compare Edward Snowden to other hackers covered in this class. We have never covered a hacker-turned-government employee yet; how does this make him different from others like Robert Morris? Is there a moral component? Is he just a hacker in a suite? Is he the same? Use at least one example from the documentary to justify your position.
