--- a/_posts/2025-04-21-class.md
+++ b/_posts/2025-04-21-class.md
@@ -4,6 +4,6 @@ layout: post
 description: "class"
 ---
 
-## Guest Speaker TBA 
-In this special-edition class, we will be having a real-world white hat hacker give a talk on major infrastructure that runs the hacker world.
-Stay tuned for the official speaker announcement. 
+## Guest Speaker: Roger Dingledine
+[Roger Dingledine](https://en.wikipedia.org/wiki/Roger_Dingledine) a co-founder of Tor will be giving a talk. 
+Class will be held in BYENG 209. 
