--- a/_posts/2025-04-28-class.md
+++ b/_posts/2025-04-28-class.md
@@ -4,10 +4,11 @@ layout: post
 description: "class"
 ---
 
-## Class 11: Modern Hacking
+## Class 11: Modern Hacking and The Dark Side
 In this final class, we talk about the entire journey we've taken to get to modern hacking, and what the scene looks like now.
 We will explore a few topics:
 - open-source hackers
 - the distribution of knowledge now
 - the art 
 - game hacking
+- illegal activitya
