--- a/_posts/2025-04-28-class.md
+++ b/_posts/2025-04-28-class.md
@@ -11,4 +11,4 @@ We will explore a few topics:
 - the distribution of knowledge now
 - the art 
 - game hacking
-- illegal activitya
+- illegal activity
