--- a/_posts/2025-04-28-class.md
+++ b/_posts/2025-04-28-class.md
@@ -1,14 +1,16 @@
 ---
-title: "Class 11: Modern Hacking"
+title: "Class 11: The Dark Side and The Future"
 layout: post
 description: "class"
 ---
 
-## Class 11: Modern Hacking and The Dark Side
+## Class 11: The Dark Side and The Future
 In this final class, we talk about the entire journey we've taken to get to modern hacking, and what the scene looks like now.
-We will explore a few topics:
-- open-source hackers
-- the distribution of knowledge now
-- the art 
-- game hacking
-- illegal activity
+
+### Class Content
+- [Slides](https://docs.google.com/presentation/d/199a_4xlq7Cs31FusGV7lJVCjXLWkgcHGDFeNe6JfwE4/edit?usp=sharing)
+
+## Final Assignment
+This class opened with a simple question: “What does it mean to be a hacker?” After 15 weeks of classes, talks, cons, you may have better insight than most people in society. 
+
+Answer the question: What does it mean to be a hacker? Respond in any way you like. Words, art, tech… no requirements on length. 
